[package]
name = "mc-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
bench = false

[dependencies]
tokio-tungstenite = "0.19.0"
tokio = { version = "1.28.1", features = ["sync", "rt", "macros"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
futures = "0.3.28"
thiserror = "1.0.40"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
# strum = { version = "0.24.1", features = ["derive"] }